--- a/manifest.json
+++ b/manifest.json
@@ -43,5 +43,5 @@
   },
   "offline_enabled": true,
   "manifest_version": 2,
-  "options_page": "options.html",
+  "options_page": "options.html"
 }
